# xlsxworld

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCKER.md  README.md  TOOLS_ARCHITECTURE.md  docker-compose.yml  ideas.md  package-lock.json  package.json  render.yaml  xlsxworld.nginx.conf
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app_factory.py  auth.py  main.py  openapi_custom.py  pyproject.toml  rate_limit.py  requirements.txt  tools_convert.py  tools_inspect.py  tools_merge_split.py
server/alembic/: env.py
server/alembic/versions/: 20260404_0001_initial_schema.py  20260417_0001_tool_jobs.py  20260417_0002_tool_request_counters.py  20260420_0001_add_encryption_blob.py
server/api/: contact.py
server/app/cli/: cleanup_expired_jobs.py
server/app/core/: app_factory.py  config.py  limits.py  openapi_custom.py  quota_guard.py  rate_limit.py  security.py
server/app/db/: __init__.py  session.py
server/app/middleware/: __init__.py  analytics.py
server/app/routes/: __init__.py  admin.py  auth.py  contact.py  launch_updates.py  me.py  system.py  usage.py
server/app/schemas/: __init__.py  (+5 more)
server/tests/: test_analytics_middleware.py  test_auth_endpoints.py  test_cleanup_script.py  test_database_layer.py  test_jobs_service.py  test_limits.py  test_models_tool_jobs.py  test_models_tool_request_counters.py  test_pagination_no_quota.py  test_quota_guard.py  test_quota_service.py  test_read_upload_for_principal.py  test_recording_helper.py  test_routes_me_jobs.py  test_routes_me_usage.py  test_routes_usage.py  test_security_jwt.py  test_security_optional_user.py  test_storage_service.py  test_tool_analyze_format_recording.py  test_tool_clean_recording.py  test_tool_convert_recording.py  test_tool_data_validate_security_recording.py  test_tool_merge_split_recording.py  test_tool_trim_spaces_recording.py  test_tool_upload_limits_parametrized.py  test_xlsx_to_pdf_wrap_layout.py
(+265 files in other folders)
